fixed text align

--- a/resources/assets/sass/app.sass
+++ b/resources/assets/sass/app.sass
@@ -154,6 +154,8 @@ footer
   width: 100%
   height: 100%
 
+.carousel-caption
+  text-align: left
 
 .louder
   position: absolute
